@@ -59,9 +59,9 @@
                 </tr>
             </thead>
         </table>
-        <metal:block tal:repeat="category view/get_categories">
+        <metal:block tal:repeat="category view/get_top_level_categories">
             <table class="listing categoryListing" cellpadding="0" cellspacing="0">
-                <tbody tal:define="subitems python: view.get_categories(context=category)">
+                <tbody tal:define="subitems python: view.get_sub_categories(context=category)">
                     <tr class="even topItem">
                         <td class="toggleCategory toggle">
                             <a href="#"
